--- a/self-assessment-app/src/styles/globals.css
+++ b/self-assessment-app/src/styles/globals.css
@@ -128,4 +128,7 @@
   #__next {
     @apply h-full w-full min-h-screen m-0 p-0 bg-background text-foreground;
   }
+  /* html{
+    scroll-behavior: smooth;
+  } */
 }
